Dev (#1)
* code features
* package and document
