# internal/entities/model/price.go
@@ -1,0 +1,32 @@
+package model
+
+import (
+	"context"
+	"time"
+
+	"github.com/google/uuid"
+	"github.com/trungdung211/token-price-fetcher/pkg/timeseries"
+	"github.com/uptrace/bun"
+)
+
+type Price struct {
+	bun.BaseModel `bun:"table:price" swaggerignore:"true"`
+
+	Id         uuid.UUID             `bun:",pk,type:uuid"`
+	Time       time.Time             `bun:"time,type:timestamptz"`
+	Token      string                `bun:"token,type:varchar(24)"`
+	Resolution timeseries.Resolution `bun:"resolution,type:smallint"`
+	PriceUSD   float32               `bun:"price_usd,type:real"`
+}
+
+var _ bun.BeforeAppendModelHook = (*Price)(nil)
+
+func (e *Price) BeforeAppendModel(ctx context.Context, query bun.Query) error {
+	switch query.(type) {
+	case *bun.InsertQuery:
+		if e.Id == uuid.Nil {
+			e.Id = uuid.New()
+		}
+	}
+	return nil
+}
